<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hostkeeper</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="current_status_label">Current status: </string>
    <string name="start_service_label">Start service</string>
    <string name="stop_service_label">Stop service</string>
    <string name="pref_host_url_key">PREF_HOST_URL</string>
    <string name="pref_host_url_title">Host URL</string>
    <string name="pref_refresh_time_key">PREF_REFRESH_TIME</string>
    <string name="pref_refresh_time_title">Refresh time</string>
    <string name="menu_preferences_title">Preferences</string>
    <string name="menu_preferences_title_cond">Settings</string>
    <string name="service_button_text_on">Stop service</string>
    <string name="service_button_text_off">Start service</string>
    <string name="status_image_description">Host status</string>
    <string name="text_view_default">Default text</string>
    <string name="status_service_stoped">Service stoped</string>
    <string name="status_service_started">Service started</string>
    <string name="status_app_ofline">Application is ofline</string>
    <string name="status_connection_error">Connection error</string>
    <string name="status_host_ofline">Host is ofline</string>
    <string name="status_host_online">Host is online</string>
    <string name="host_name_label">Host name:</string>
    <string name="host_name_value"></string>
    <string name="time_label">Last time: </string>
    <string name="time_value"></string>
    <string name="title_activity_status">StatusActivity</string>
    <string name="tab_all_label">All statuses</string>
    <string name="tab_failure_statuses">Failure statuses</string>
    <string name="menu_history_of_checks_title">History of checks</string>
    <string name="menu_history_of_checks_title_cond">History of checks</string>
    <string name="menu_pie_chart_title">Pie chart</string>
    <string name="menu_pie_chart_title_cond">Pie chart</string>
    <string name="title_activity_pie_chart">PieChartActivity</string>
    <string name="label_pie_ofline">Ofline</string>
    <string name="label_pie_online">Online</string>

</resources>