<TableLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="MainActivity" xmlns:android="http://schemas.android.com/apk/res/android">

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/host_name_label"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/host_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/host_name_value"
            android:textSize="20sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/current_status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_status_label"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/current_status_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/status_image_description"
            android:src="@drawable/ic_question" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/timeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_label"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_value"
            android:textSize="20sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <ToggleButton
            android:id="@+id/service_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:textOff="@string/service_button_text_off"
            android:textOn="@string/service_button_text_on" />

    </TableRow>

</TableLayout>